@@ -926,11 +926,9 @@ class StorageServer:
             # be good. :) Doing this allows clients that were up to
             # date when a server was restarted to pick up transactions
             # it subsequently missed.
-            self.invq[name] = [(storage.lastTransaction(), None)]
+            self.invq[name] = [(storage.lastTransaction() or z64, None)]
         else:
-            self.invq[name] = list(
-                lastInvalidations(self.invq_bound)
-                )
+            self.invq[name] = list(lastInvalidations(self.invq_bound))
             self.invq[name].reverse()
 
 
